interface CoffeeInterface {
    public void drink();
    public void decorate(String decoration);
}
